Translations to spanish updated

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-03 12:39-0600\n"
+"POT-Creation-Date: 2021-06-27 20:47-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,11 +29,13 @@ msgstr "403 - Acceso restringido"
 #: templates/403.html:9
 msgid ""
 "This page has restricted access and you don't have permissions to access."
-msgstr "Esta página tiene acceso restringido y no posee permisos para acceder a ella."
+msgstr ""
+"Esta página tiene acceso restringido y no posee permisos para acceder a ella."
 
 #: templates/403.html:10
 msgid "If you need access to this page, contact your system administrator."
-msgstr "Si necesita acceder a esta página, contacte al administrador del sitio."
+msgstr ""
+"Si necesita acceder a esta página, contacte al administrador del sitio."
 
 #: templates/403.html:11 templates/404.html:10 templates/500.html:11
 msgid "Return  home"
@@ -60,5 +62,5 @@ msgid ""
 "Try to reload the page and if the problem persists contact your system "
 "administrator."
 msgstr ""
-"Trate de recargar la página, si el problema persiste, contacte al"
-"administrador del sitio."
+"Trate de recargar la página, si el problema persiste, contacte "
+"aladministrador del sitio."
